--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -44,11 +44,12 @@ to {
     
 }
 @media (max-width:500px) {
+
     #sidebar{
-       display: none;
+      width: 30%;
     }
     .hidden_menu{
         display: block;
     }
-    
+  
 }
